Add packaging instructions